--- a/components/landing-page/landing-page.css
+++ b/components/landing-page/landing-page.css
@@ -31,15 +31,28 @@
 
 .cta-text-title {
   display: block;
+  text-shadow: 0px 5px black;
 }
 
 .cta-text-desc {
   display: inline-block;
   max-width: 50%;
   font-family: "Poppins", sans-serif;
+  text-shadow: 0px 0px 5px black;
 }
 
-.featured{
+.featured {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+}
+
+.btn-add-cart {
+  text-decoration: none;
+}
+
+.btn-buy {
+  background-color: var(--info-color);
+  color: var(--lynxwhite-color);
+  padding: 1rem 2rem;
 }
