--- a/components/Cards/cards.css
+++ b/components/Cards/cards.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   background-color: white;
   border-radius: 0.5rem;
-  width: 35rem;
+  max-width: 35rem;
   height: fit-content;
   margin: 2rem;
   position: relative;
@@ -71,6 +71,7 @@
   padding: 0rem 1.6rem;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .card-footer-icons {
