added login button to landing page

--- a/components/Buttons/buttons.css
+++ b/components/Buttons/buttons.css
@@ -53,8 +53,8 @@
 }
 
 .btn-link {
-  background-color: var(--info-color);
-  text-decoration: underline;
+  color:var(--black-color);
+  text-decoration: none;
   text-underline-offset: 0.2rem;
 }
 
