--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -24,6 +24,13 @@
   gap: 1rem;
 }
 
+.nav-item-right .btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-family: "Fredoka One", cursive;
+}
+
 .nav-search-bar,
 .nav-search-bar > input {
   max-width: 50rem;
