added login card

--- a/components/Cards/cards.css
+++ b/components/Cards/cards.css
@@ -154,3 +154,66 @@
 .card-light-shadow {
   box-shadow: 0 0 1rem var(--lynxwhite-color);
 }
+
+/* Login Card */
+.login-container {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-login,
+.login-sso,
+.login-sso-icons,
+.login-username,
+.login-password {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.card-login {
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 3rem;
+  border: 5px solid var(--lynxwhite-color);
+  border-radius: 0.5rem;
+  width: 500px;
+  max-width: 80rem;
+  max-height: 80rem;
+  height: 500px;
+  padding: 2rem;
+  font-size: 2rem;
+}
+
+.login-title {
+  font-family: "Fredoka One", cursive;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  color: var(--violet-color);
+}
+
+.login-username,
+.login-password {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.login-username > input {
+  flex: 1 1 auto;
+}
+
+.login-password > input {
+  flex: 1 1 auto;
+}
+
+.login-sso {
+  flex-direction: column;
+}
+
+.login-sso-icons {
+  font-size: 3rem;
+}
