--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
 @import url(./components/navbar/navbar.css);
 @import url(./components/rating/rating.css);
 @import url(./components/landing-page/landing-page.css);
+@import url(./components/login/login.css);
 
 html {
   font-size: 62.5%; /* 16px is assumed */
