--- a/components/product-page/product-page.css
+++ b/components/product-page/product-page.css
@@ -39,3 +39,15 @@
 .product-listing-container {
   overflow: auto;
 }
+
+@media only screen and (max-width: 640px) {
+  .filter-listing-container{
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .filter-listing-container{
+    display: block;
+  }
+}
