--- a/components/product-page/product-page.css
+++ b/components/product-page/product-page.css
@@ -15,7 +15,7 @@
 .filter-container {
   display: flex;
 }
-.filter-header{
+.filter-header {
   border-bottom: 1px solid var(--lynxwhite-color);
   padding-bottom: 1rem;
 }
@@ -25,29 +25,41 @@
   text-underline-offset: 0.5rem;
 }
 
-.filter-content-container{
+.filter-content-container {
   flex-direction: column;
-  gap:2rem;
+  gap: 2rem;
   padding-top: 1rem;
 }
 
 .filter-container {
   flex-direction: column;
-  gap:1rem;
+  gap: 1rem;
 }
 
 .product-listing-container {
+  display: grid;
+  gap:2rem;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   overflow: auto;
 }
 
-@media only screen and (max-width: 640px) {
-  .filter-listing-container{
+@media only screen and (max-width: 735px) {
+  .product-page{
+    grid-template-columns: 1fr;
+    place-items: center;
+    overflow: scroll;
+  }
+  .product-listing-container{
+    grid-template-columns: repeat(auto-fit, 1fr);
+
+  }
+  .filter-listing-container {
     display: none;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .filter-listing-container{
+  .filter-listing-container {
     display: block;
   }
 }
