--- a/components/product-page/product-page.css
+++ b/components/product-page/product-page.css
@@ -7,7 +7,7 @@
   overflow: auto;
   padding: 1rem;
   gap: 1rem;
-  height: 80vh;
+  max-height: 80vh;
 }
 
 .filter-header,
@@ -55,6 +55,10 @@
   }
   .filter-listing-container {
     display: none;
+    width: 80%;
+    overflow: hidden;
+    position: fixed;
+    top:100px;
   }
 }
 
