fixed side nav for all pages

--- a/components/landing-page/landing-page.css
+++ b/components/landing-page/landing-page.css
@@ -52,3 +52,9 @@
 .featured > div {
   cursor: pointer;
 }
+
+.page-side-nav{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
