--- a/components/product-page/product-page.css
+++ b/components/product-page/product-page.css
@@ -1,13 +1,14 @@
 .product-page {
   display: grid;
   grid-template-columns: 30rem auto;
+  height: 100vh;
 }
 
 .filter-listing-container {
   overflow: auto;
   padding: 1rem;
   gap: 1rem;
-  height: fit-content;
+  width: 90%;
 }
 
 .filter-header,
@@ -38,27 +39,19 @@
 
 .product-listing-container {
   display: grid;
-  gap:2rem;
+  gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   overflow: auto;
 }
 
 @media only screen and (max-width: 735px) {
-  .product-page{
+  .product-page {
     grid-template-columns: 1fr;
     place-items: center;
-    overflow: scroll;
+    overflow: auto;
   }
-  .product-listing-container{
+  .product-listing-container {
     grid-template-columns: repeat(auto-fit, 1fr);
-
-  }
-  .filter-listing-container {
-    display: none;
-    width: 80%;
-    overflow: hidden;
-    position: fixed;
-    top:100px;
   }
 }
 
