--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
 @import url(./components/landing-page/landing-page.css);
 @import url(./components/login/login.css);
 @import url(./components/product-page/product-page.css);
+@import url(./components/cart/cart.css);
 
 html {
   font-size: 62.5%; /* 16px is assumed */
