--- a/components/Cards/cards.css
+++ b/components/Cards/cards.css
@@ -289,13 +289,29 @@
   width: 100%;
 }
 
-.card-product-content{
+.card-product-content {
   line-height: 2rem;
 }
 
 .cart-quantity {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: fit-content;
   border: 1px solid var(--violet-color);
+}
+
+.card-price{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.cart-price-breakdown {
+  display: grid;
+  grid-template-columns:1fr 1fr;
+}
+.cart-price-amount{
+  justify-self: end;
 }
