--- a/components/cart/cart.css
+++ b/components/cart/cart.css
@@ -24,6 +24,10 @@
   align-items: center;
 }
 
+.cart-quantity{
+  align-self: flex-end;
+}
+
 @media only screen and (max-width: 767px) {
   .cart-page {
     grid-template-columns: 1fr auto 1rem;
