--- a/components/product-page/product-page.css
+++ b/components/product-page/product-page.css
@@ -41,17 +41,15 @@
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-  overflow: auto;
 }
 
-@media only screen and (max-width: 735px) {
+@media only screen and (max-width: 767px) {
   .product-page {
     grid-template-columns: 1fr;
     place-items: center;
-    overflow: auto;
   }
   .product-listing-container {
-    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-columns: 1fr;
   }
 }
 
